<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dscudr.gym_buddy.gym_buddy.diet_types_fragment.NonVegFragment"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/time_7"
                    style="@style/menu_heading"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_item_tile_height"
                    android:src="@drawable/luke"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/food_image_desc"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/luke_water"
                    style="@style/menu_text"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time_7_30"
                    style="@style/menu_heading"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_item_tile_height"
                    android:src="@drawable/dryfruits"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/food_image_desc"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dry_fruits"
                    style="@style/menu_text"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast_title"
                    style="@style/menu_heading"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_item_tile_height"
                    android:src="@drawable/breakfast_nonveg"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/food_image_desc"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast_nonveg"
                    style="@style/menu_text"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch_title"
                    style="@style/menu_heading"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_item_tile_height"
                    android:src="@drawable/lucnh_nonveg"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/food_image_desc"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch_non_veg"
                    style="@style/menu_text"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Dinner_title"
                    style="@style/menu_heading"
                    />
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/menu_item_tile_height"
                    android:src="@drawable/dinner_nonveg"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/food_image_desc"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Dinner_nonveg"
                    style="@style/menu_text"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/before_bed_title"
                    style="@style/menu_heading"
                    />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/menu_item_tile_height"
                android:src="@drawable/milk"
                android:scaleType="fitXY"
                android:contentDescription="@string/food_image_desc"
                />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/before_bed"
                    style="@style/menu_text"
                    />
        </LinearLayout>

</ScrollView>
