<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dscudr.gym_buddy.gym_buddy.BmiCalculator"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:elevation="@dimen/elevation_high"
        >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:titleTextColor="@color/White"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/exercise_tile_land"
        android:elevation="@dimen/elevation_high"
        android:id="@+id/relativeLayout">

        <com.jackandphantom.circularprogressbar.CircleProgressbar
            android:id="@+id/yourCircularProgressbar"
            android:layout_width="@dimen/exercise_height"
            android:layout_height="@dimen/exercise_height"
            android:layout_marginStart="39dp"
            android:layout_marginTop="81dp"
            app:cpb_foregroundProgressColor="#1864c2"
            app:cpb_progress="0"
            app:cpb_roundedCorner="true" />

        <TextView
            android:id="@+id/bmi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/yourCircularProgressbar"
            android:layout_alignEnd="@+id/yourCircularProgressbar"
            android:layout_marginBottom="@dimen/margin_big_50dp"
            android:layout_marginEnd="@dimen/margin_big_50dp"
            android:text=""
            android:fontFamily="@font/amiko"
            android:textSize="@dimen/text_heading_24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/yourCircularProgressbar"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_toEndOf="@+id/bmi"
            android:orientation="vertical"
            android:id="@+id/linearLayout2"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4dp"
                android:text="@string/Underweight"
                android:textSize="@dimen/text_12"
                android:textStyle="bold"
                android:fontFamily="@font/amiko"
                android:textColor="@color/light_yellow"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4dp"
                android:fontFamily="@font/amiko"
                android:text="@string/Normal"
                android:textSize="@dimen/text_12"
                android:textColor="@color/light_green"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4dp"
                android:fontFamily="@font/amiko"
                android:text="@string/Overweight"
                android:textSize="@dimen/text_12"
                android:textColor="@color/light_red"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_4dp"
                android:text="@string/Obse"
                android:textSize="@dimen/text_12"
                android:fontFamily="@font/amiko"
                android:textColor="@color/light_orange"
                android:textStyle="bold"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/relativeLayout"
        android:id="@+id/linearLayout3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/amiko"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:text="@string/weight"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_heading_20sp" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:fontFamily="@font/amiko"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_heading_20sp"
            android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false"
            >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_big_50dp"
            >
            <TextView
                android:id="@+id/textView11"
                android:layout_width="@dimen/input_feild_small"
                android:layout_height="wrap_content"
                android:text="@string/unit_kg"
                android:fontFamily="@font/amiko"
                android:textAlignment="center"
                android:textColor="@color/Black" />

            <Switch

                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="@dimen/input_feild_small"
                android:layout_height="wrap_content"
                android:text="@string/unit_lbs"
                android:fontFamily="@font/amiko"
                android:textAlignment="center"
                android:textColor="@android:color/black" />
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/margin_big_50dp"
            >

            <TextView
                android:id="@+id/textView13"
                android:layout_width="@dimen/input_feild_small"
                android:layout_height="wrap_content"
                android:text="@string/unit_cm"
                android:fontFamily="@font/amiko"
                android:textAlignment="center"
                android:textColor="@android:color/black" />

            <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/textView14"
                android:layout_width="@dimen/input_feild_small"
                android:layout_height="wrap_content"
                android:text="@string/unit_feet"
                android:fontFamily="@font/amiko"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                />
        </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/weight"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/unit_kg"
            android:fontFamily="@font/amiko"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="14sp"
            android:layout_weight="1"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText
                android:id="@+id/Feet"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/unit_cm"
                android:fontFamily="@font/amiko"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="@dimen/text_14"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/Inch"
                android:layout_width="@dimen/input_feild"
                android:layout_height="wrap_content"
                android:hint="@string/unit_inch"
                android:fontFamily="@font/amiko"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="@dimen/text_14"
                android:layout_weight="1"
                android:visibility="gone"/>

        </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko"
        android:layout_below="@+id/linearLayout3"
        android:background="@color/blue_success"
        android:layout_marginStart="12dp"
        android:layout_marginTop="11dp"
        android:textColor="@color/White"
        android:text="@string/calculate"
        android:id="@+id/Calculate"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_margin="@dimen/margin_16dp"
        />



</RelativeLayout>
