<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dscudr.gym_buddy.gym_buddy.WaterCalculator">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/appbar"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            app:titleTextColor="@color/White"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            />
    </android.support.design.widget.AppBarLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info"
        android:layout_below="@id/appbar"
        android:text="@string/inform"
        android:textSize="@dimen/text_heading_20sp"
        android:fontFamily="@font/amiko"
        android:layout_margin="@dimen/margin_big"
        android:textColor="@color/Black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hint"
        android:text="@string/enter_weight"
        android:fontFamily="@font/amiko"
        android:layout_below="@+id/info"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textSize="@dimen/text_16"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_weight"
        android:layout_margin="@dimen/margin_big"
        android:layout_below="@id/hint"
        android:hint="@string/unit_kg"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calculate"
        android:layout_below="@+id/input_weight"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/calculate"
        android:textColor="@color/White"
        android:fontFamily="@font/amiko"
        android:background="@color/blue_success"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="200dp"
        android:fontFamily="@font/amiko"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculate"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_16dp"
        android:textColor="@color/Black"
        android:textSize="@dimen/text_heading_20sp"/>

    <RelativeLayout
        android:id="@+id/r_n"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:layout_marginTop="@dimen/margin_16dp"
        >


        <Switch
            android:id="@+id/sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="84dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko"
            android:textSize="@dimen/text_16"
            android:text="@string/Reminder_Notification"
            android:textColor="@color/Black"
            android:layout_marginStart="@dimen/margin_16dp"
            />

    </RelativeLayout>

</RelativeLayout>
