<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dscudr.gym_buddy.gym_buddy.Utilities"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:layout_margin="@dimen/margin_8dp"
        android:elevation="@dimen/elevation_low"
        android:orientation="horizontal"
        android:id="@+id/water_calculator">
        <ImageView
            android:layout_width="@dimen/utility_icon_size"
            android:layout_height="@dimen/utility_icon_size"
            android:layout_margin="@dimen/margin_16dp"
            android:src="@drawable/water_cal"
            android:contentDescription="@string/utility_icon_desc"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_heading_20sp"
            android:text="@string/water_calculator_utility"
            android:fontFamily="@font/amiko"
            android:textColor="@color/Black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:layout_margin="@dimen/margin_8dp"
        android:elevation="@dimen/elevation_low"
        android:orientation="horizontal"
        android:id="@+id/bmi_calculator"
        >
        <ImageView
            android:layout_width="@dimen/utility_icon_size"
            android:layout_height="@dimen/utility_icon_size"
            android:layout_margin="@dimen/margin_16dp"
            android:src="@drawable/bmi"
            android:contentDescription="@string/utility_icon_desc"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_heading_20sp"
            android:fontFamily="@font/amiko"
            android:text="@string/bmi_calculator_utility"
            android:textColor="@color/Black"/>
    </LinearLayout>
</LinearLayout>

